change logo, remove old typed.js, change button wording to get your invite

--- a/public/index.html
+++ b/public/index.html
@@ -10,40 +10,15 @@
 		<link rel="icon" type="image/png" href="./images/novlricondark.png">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="./js/analytics.js"></script>
-		<script src="./js/typed.js"></script>
-			
+
 	</head>
 	<body class="home">
-		<script>
-  			$(function(){
-      			$(".typing").typed({
-        		strings: ["makes it simple", "gives you control", "keeps your novels safe", "puts the focus on your words", "takes care of the boring bits", "lets you change your mind"],
-        		typeSpeed: 40, // typing speed
-        		backDelay: 500, // pause before backspacing
-        		loop: true, // loop on or off (true or false)
-        		loopCount: false, // number of loops, false = infinite
-        		callback: function(){ } // call function after typing is done
-      			});
-  			});
-  			</script>
-  			
-  		<script>
-  			$(function(){
-      			$(".texttyping").typed({
-        		strings: ["Novlr makes it so nice to write you won't be able to stop yourself, it's a bit like heroin really. Novlr keeps your novel safe, so even you can'' lose it. Novlr takes care of the boring bits so you can, well, take care of the boring bits. Novlr will make your mum prouder of you. Novlr will make you feel great when, you know, you're actually achieving something. Novlr will point out your failings in an 'I'm not angry, just disappointed' type way. Novlr will make you more attractive - we promise. Novlr... ok I think you get the point...Novlr gives you no excuses."],
-        		typeSpeed: 40, // typing speed
-        		backDelay: 50, // pause before backspacing
-        		loop: false, // loop on or off (true or false)
-        		callback: function(){ } // call function after typing is done
-      			});
-  			});
-  			</script>
   	
 		<div class="fullimagewrap">
 			<header>
 				<div class="wrapper">
 					<div class="logo">
-						<a href="/"><img src="images/Novlr.logo.marketing.png"></a>
+						<a href="/"><img src="images/Novlr-logo-white.png"></a>
 					</div>
 					<div class="topmenu social">
 						<ul>
@@ -75,7 +50,7 @@
 					<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email" required>
     				<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     				<div style="position: absolute; left: -5000px;"><input type="text" name="b_b83ac6880baafd2a2a94d4242_6ac3a64f60" value=""></div>
-					<div class="clear"><input type="submit" value="Sign up for open beta" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
+					<div class="clear"><input type="submit" value="Get your beta invite" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
 					</form>
 				</div>
 
@@ -94,14 +69,8 @@
 	<div class="container">
 			<div class="wrapper">
 				<div class="novlrimage">
-					<img src="/images/nov-wireTM.jpg">
+					<img src="/images/Chapters.png">
 				</div>
-			<!-- 		<h3 class="tablethide">Why Novlr?</h3>
-				<span id="wordcount"></span>
-				<div class="product_example tablethide"><span class="texttyping" id="words"></span><br></div>
-				<script type='text/javascript'>var count = document.getElementById('words').innerHTML.split(' ').length; document.getElementById('wordcount').innerHTML=count;</script>
-	
-	-->
 				<div class="promoblock">
 					<h3>You won't lose work. Ever.</h3>
 					<p>We've all felt the pain of loss. Pain should generally be avoided. So we save everything, all the time. You don't need to think about it.</p>
@@ -141,7 +110,7 @@
 							<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email" required>
 		    				<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 		    				<div style="position: absolute; left: -5000px;"><input type="text" name="b_b83ac6880baafd2a2a94d4242_6ac3a64f60" value=""></div>
-							<div class="clear"><input type="submit" value="Sign up for open beta" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
+							<div class="clear"><input type="submit" value="Get your beta invite" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
 							</form>
 						</div>
 
