--- a/public/roadmap.html
+++ b/public/roadmap.html
@@ -10,25 +10,13 @@
 		<link rel="icon" type="image/png" href="./images/novlricondark.png">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="./js/analytics.js"></script>
-		<script src="./js/typed.js"></script>	
 	</head>
 	<body>
-		<script>
-  			$(function(){
-      			$(".typing").typed({
-        		strings: ["Novlr have big plans. Help us shape them."],
-        		typeSpeed: 40, // typing speed
-        		backDelay: 500, // pause before backspacing
-        		loop: false,
-        		callback: function(){ } // call function after typing is done
-      			});
-  			});
-		</script>
 		<div class="fullimagewrap">
 			<header>
 				<div class="wrapper">
 					<div class="logo">
-						<a href="/"><img src="images/Novlr.logo.marketing.png"></a>
+						<a href="/"><img src="images/Novlr-logo-white.png"></a>
 					</div>
 					<div class="topmenu social">
 						<ul>
@@ -59,7 +47,7 @@
 					<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email" required>
     				<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     				<div style="position: absolute; left: -5000px;"><input type="text" name="b_b83ac6880baafd2a2a94d4242_6ac3a64f60" value=""></div>
-					<div class="clear"><input type="submit" value="Sign up for open beta" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
+					<div class="clear"><input type="submit" value="Get your beta invite" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
 					</form>
 				</div>
 
@@ -127,7 +115,7 @@
 							<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email" required>
 		    				<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 		    				<div style="position: absolute; left: -5000px;"><input type="text" name="b_b83ac6880baafd2a2a94d4242_6ac3a64f60" value=""></div>
-							<div class="clear"><input type="submit" value="Sign up for open beta" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
+							<div class="clear"><input type="submit" value="Get your beta invite" name="subscribe" id="mc-embedded-subscribe" class="tryit"></div>
 							</form>
 						</div>
 
