--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oxygen:300,400,700">
 		<link rel="stylesheet" href="href='http://fonts.googleapis.com/css?family=Open+Sans:400,300">
-		<link rel="icon" type="image/png" href="./images/novlricondark.png">
+		<link rel="icon" type="image/png" href="./images/Bookmark-leftsquare3.ico">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="./js/analytics.js"></script>
 
