beta page and homepage presence

--- a/public/beta.html
+++ b/public/beta.html
@@ -37,8 +37,8 @@
 				</div>
 			</header>
 			<div class="clear"></div>
-			<h1>How's that novel of yours coming?</h1>
-			<h2 id="secondsentence">Now there's no excuse.</h2>
+			<h1>Novlr is currently in private Beta</h1>
+			<h2 id="secondsentence">Not long now...</h2>
 			<div id="inviteform">
 				<!-- Begin MailChimp Signup Form -->
 				<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
@@ -58,39 +58,103 @@
 				
     		</div>
 		</div>
-
-		<div class="container">
-			<h2>Novlr is currently in <span><a href="/beta.html">private beta</a></span> with <span>1,334</span> beta testers and counting...</h2>
-		</div>
-
 		<div class="container grey">
 			<div class="wrapper">
-				<p>Some people like to say, "There's a novel in everyone". There isn't. Most people don't have the patience and dedication required to write a book.<br><br><span> But you do.</span><br> <br>So we'll take care of the formatting, backups, word counts etc and you can concentrate on the words.</p>
+				<h2>Novlr has been in Beta for<span>
+				<script language="JavaScript" type="text/javascript">
+
+				function days_between(date1, date2) {
+
+				    // The number of milliseconds in one day
+				    var ONE_DAY = 1000 * 60 * 60 * 24
+
+				    // Convert both dates to milliseconds
+				    var date1_ms = date1.getTime()
+				    var date2_ms = date2.getTime()
+
+				    // Calculate the difference in milliseconds
+				    var difference_ms = Math.abs(date1_ms - date2_ms)
+				    
+				    // Convert back to days and return
+				    return Math.round(difference_ms/ONE_DAY)
+
+				}
+				    var current_date = new Date();
+				    var launch_date = new Date(1408887394000);
+				    document.write(days_between(current_date, launch_date))
+
+				</script></span> days and has <span>1,184</span> testers using it. There are <span>6</span> open bugs and <span>3</span> that have been squashed.</h2>
 			</div>
 		</div>
 	
 	
 	<div class="container">
 			<div class="wrapper">
-				<div class="novlrimage">
-					<img src="/images/Chapters.png">
+			<div class="bugwidget">
+				<h3>Open bugs</h3>
+				<div class="container">
+					<div class="row">
+						<div class="span5">
+				            <table class="table table-striped table-condensed">
+				                  <thead>
+				                  <tr>
+				                      <th>Description</th>
+				                      <th>Status</th>
+				                      <th>Priority</th>                                        
+				                  </tr>
+				              </thead>   
+				              <tbody>
+				                <tr>
+				                    <td>Pasting from novlr into novlr in safari adds unnecessary line breaks</td>
+				                    <td>In progress</td>
+				                    <td><span class="label label-high">high</span>
+				                    </td>                                       
+				                </tr>
+				                <tr>
+				                    <td>Favicon not showing</td>
+				                    <td>In progress</td>
+				                    <td><span class="label label-high">high</span>
+				                    </td>                                       
+				                </tr>
+				                <tr>
+				                    <td>If you add new chapter when in the last chapter, the previous chapter's text remains in the editor</td>
+				                    <td>reported</td>
+				                    <td><span class="label label-high">high</span></td>                                        
+				                </tr>
+				                <tr>
+				                    <td>When selecting text, it acts stranglely if you move the cursor too far left</td>
+				                    <td>reported</td>
+				                    <td><span class="label label-medium">medium</span></td>                                        
+				                </tr>                                   
+				                <tr>
+				                    <td>When you first load the page, there are functions in place or title and name for a milisecond</td>
+				                    <td>reported</td>
+				                    <td><span class="label label-low">low</span></td>                                       
+				                </tr>
+				                <tr>
+				                    <td>Empty chapter shows word count of 1</td>
+				                    <td>reported</td>
+				                    <td><span class="label label-low">low</span></td>                                       
+				                </tr>
+				                <tr>
+				                    <td>When you switch chapter, the cursor should be "live" in the editor so you can immediately start typing</td>
+				                    <td>reported</td>
+				                    <td><span class="label label-low">low</span></td>                                        
+				                </tr>  
+				              </tbody>
+				            </table>
+				            </div>
+					</div>
 				</div>
-				<div class="promoblock">
-					<h3>You won't lose work. Ever.</h3>
-					<p>We've all felt the pain of loss. Pain should generally be avoided. So we save everything, all the time. You don't need to think about it.</p>
-				</div>
-				<div class="promoblock">
-					<h3>Your novel is always with you.</h3>
-					<p>If you've got the internet, you've got Novlr. Your phone, a computer at work, your mum's ipad, that dodgy internet cafe - they all work.</p>
-				</div>
-				<div class="promoblock">
-					<h3>Challenge yourself</h3>
-					<p>Set yourself a goal. Then once you've finished that doodle of a pigeon, set yourself a writing goal. Track your progress and celebrate wins.</p>
-				</div>
-				<div class="promoblock">
-					<h3>Tell us what you need...</h3>		
-					<p>We're here to solve writing problems. What frustrates you? We've got lots of ideas but <a href="http://blog.novlr.org/we-like-feedback/">tell us what's important</a> and we'll make it happen.</p>
-				</div>
+				<p style="text-align:left;">You have also let us know what features you would like and suggested improvements for Novlr. You can see the bigger feature requests and vote for which are most important to you.</p>
+				<p style="text-align:left;">Keep testing and <a href="https://gitreports.com/issue/Novlr/novlr-beta">keep reporting!</a></p>
+			</div>
+			<div class="twitterwidget">
+				<h3>What you're saying on twitter</h3></br>
+				<a class="twitter-timeline" href="https://twitter.com/hashtag/novlrbeta" data-widget-id="503894548834041856">#novlrbeta Tweets</a>
+				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+			</div>
+
 				<div class="clear"></div>
 			</div>
 		</div>
