text and title changes

--- a/public/beta.html
+++ b/public/beta.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Novlr | Online novel writing software - free trial</title>
+		<title>Novlr Beta | Novlr is in private beta - online novel writing software - free trial</title>
 		<meta name="description" content="How’s that novel of yours coming along? Now there’s no excuse. Novel writing. Simply.">
 		<link rel="stylesheet" href="./css/default.css">
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
@@ -83,7 +83,7 @@
 				    var launch_date = new Date(1408887394000);
 				    document.write(days_between(current_date, launch_date))
 
-				</script></span> days and has <span>1,184</span> testers using it. There are <span>6</span> open bugs and <span>3</span> that have been squashed.</h2>
+				</script></span> days and has <span>200</span> testers using it. There are <span>6</span> open bugs and <span>3</span> that have been squashed.</h2>
 			</div>
 		</div>
 	
@@ -146,7 +146,7 @@
 				            </div>
 					</div>
 				</div>
-				<p style="text-align:left;">You have also let us know what features you would like and suggested improvements for Novlr. You can see the bigger feature requests and vote for which are most important to you.</p>
+				<p style="text-align:left;">You have also let us know what features you would like and suggested improvements for Novlr. You can see the bigger feature requests and vote for which are most important to you <a href="http://blog.novlr.org/tell-us-what-you-need-and-well-build-it/">on the novlr blog</a></p>
 				<p style="text-align:left;">Keep testing and <a href="https://gitreports.com/issue/Novlr/novlr-beta">keep reporting!</a></p>
 			</div>
 			<div class="twitterwidget">
