adding beta to menu and changing number of users on homepage

--- a/public/features.html
+++ b/public/features.html
@@ -40,6 +40,7 @@
 					<div class="topmenu">
 						<ul>
 							<li><a href="/features.html" title="Features of Novlr">Features</a></li>
+							<li><a href="/beta.html" title="See what's happening in Beta">Beta</a></li>
 							<li><a href="/roadmap.html" title="Plans for Novlr's future">Roadmap</a></li>
 							<li><a href="http://blog.novlr.org" title="Read the Novlr blog">Blog</a></li>
 						</ul>
