adding twitter to homepage and changing intro text

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
 					<div class="topmenu">
 						<ul>
 							<li><a href="/features.html" title="Features of Novlr">Features</a></li>
+							<li><a href="/beta.html" title="See what's happening in Beta">Beta</a></li>
 							<li><a href="/roadmap.html" title="Plans for Novlr's future">Roadmap</a></li>
 							<li><a href="http://blog.novlr.org" title="Read the Novlr blog">Blog</a></li>
 						</ul>
@@ -60,15 +61,17 @@
 		</div>
 
 		<div class="container">
-			<h2>Novlr is currently in <span><a href="/beta.html">private beta</a></span> with <span>200</span> beta testers and counting...</h2>
+			<div class="wrapper">
+				<h2>Novlr is currently in <span><a href="/beta.html">private beta</a></span> with <span>200</span> beta testers and counting...</h2>
+			</div>
 		</div>
 
 		<div class="container grey">
 			<div class="wrapper">
-				<p>Some people like to say, "There's a novel in everyone". There isn't. Most people don't have the patience and dedication required to write a book.<br><br><span> But you do.</span><br> <br>So we'll take care of the formatting, backups, word counts etc and you can concentrate on the words.</p>
+				<p>You're writing a novel. That makes you brave, committed and perhaps a touch foolish.</p><p><span>Why? Because it's hard</span>.</p>
+				<p>So we've decided to help by taking care of the formatting, backups, word counts etc and letting you concentrate on those pesky, slippery little words.</p>
 			</div>
 		</div>
-	
 	
 	<div class="container">
 			<div class="wrapper">
@@ -94,12 +97,27 @@
 				<div class="clear"></div>
 			</div>
 		</div>
-		<div class="container grey">
+		<div class="container twittercards grey">
+			<h3>Lovely things people are saying</h3>
+			<div class="wrapper">
+				<blockquote class="twitter-tweet" lang="en"><p>The <a href="https://twitter.com/hashtag/novlrbeta?src=hash">#novlrbeta</a> looks great. It has such a clean interface. It makes it very easy to focus on the writing.</p>&mdash; Axiom X the 3rd (@AxiomXIII) <a href="https://twitter.com/AxiomXIII/statuses/503943149765398528">August 25, 2014</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+				<blockquote class="twitter-tweet" lang="en"><p>For <a href="https://twitter.com/hashtag/writers?src=hash">#writers</a> who think <a href="https://twitter.com/ScrivenerApp">@ScrivenerApp</a> is too cluttered/complicated, this looks like a good alternative - <a href="http://t.co/2CHC0esBmY">http://t.co/2CHC0esBmY</a> <a href="https://twitter.com/novlrtweets">@novlrtweets</a></p>&mdash; Daniel Whyte IV (@danielwhyteiv) <a href="https://twitter.com/danielwhyteiv/statuses/481817527614316545">June 25, 2014</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+				<blockquote class="twitter-tweet" lang="en"><p><a href="https://twitter.com/novlrtweets">@novlrtweets</a> Are we there yet? Are we there yet? Are we there yet? Are we there yet? Are we there yet? Are we there yet? Are we there yet...</p>&mdash; Andy Barratt (@apbarratt) <a href="https://twitter.com/apbarratt/statuses/493757034639400960">July 28, 2014</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+				<blockquote class="twitter-tweet" lang="en"><p><a href="https://twitter.com/novlrtweets">@novlrtweets</a> 1000 words with my <a href="https://twitter.com/hashtag/novlrbeta?src=hash">#novlrbeta</a> woop! woop!</p>&mdash; Ebone (@EBee1Cherie) <a href="https://twitter.com/EBee1Cherie/statuses/503892679910895617">August 25, 2014</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>	
+				<div class="clear">&nbsp;</div>
+				<p><strong><a target="_blank" href="https://storify.com/novlrtweets/lovely-things-people-say-about-novlr">Read more lovely things</a></strong></p>
+			</div>
+		</div>
+		<div class="container">
 			<div class="wrapper">
 				<h2>Read our <a href="blogs.novlr.org">blogs</a> for inspiration or view our <a href="/features.html">features page</a> for an in-depth look.</h2>
 			</div>
 		</div>
-		<div class="container">
+		<div class="container grey">
 			<div class="wrapper">
 				<p>We are writers making this for writers - call it our version of procrastination (the house was already clean) - because we want to give YOU no more excuses.</p>
 				<a href="http://blog.novlr.org/we-like-feedback">Feedback welcome and encouraged!</a></br></br>
