updating bug list

--- a/public/beta.html
+++ b/public/beta.html
@@ -84,7 +84,7 @@
 				    var launch_date = new Date(1408887394000);
 				    document.write(days_between(current_date, launch_date))
 
-				</script></span> days and has <span>200</span> testers using it. There are <span>6</span> open bugs and <span>3</span> that have been squashed.</h2>
+				</script></span> days and has <span>200</span> testers using it. There are <span>3</span> open bugs and <span>4</span> that have been squashed.</h2>
 			</div>
 		</div>
 	
@@ -92,7 +92,7 @@
 	<div class="container">
 			<div class="wrapper">
 			<div class="bugwidget">
-				<h3>Open bugs</h3>
+				<h3>Bug progress</h3>
 				<div class="container">
 					<div class="row">
 						<div class="span5">
@@ -112,35 +112,33 @@
 				                    </td>                                       
 				                </tr>
 				                <tr>
-				                    <td>Favicon not showing</td>
-				                    <td>In progress</td>
-				                    <td><span class="label label-high">high</span>
-				                    </td>                                       
-				                </tr>
-				                <tr>
-				                    <td>If you add new chapter when in the last chapter, the previous chapter's text remains in the editor</td>
-				                    <td>reported</td>
-				                    <td><span class="label label-high">high</span></td>                                        
-				                </tr>
-				                <tr>
 				                    <td>When selecting text, it acts stranglely if you move the cursor too far left</td>
 				                    <td>reported</td>
 				                    <td><span class="label label-medium">medium</span></td>                                        
 				                </tr>                                   
 				                <tr>
-				                    <td>When you first load the page, there are functions in place or title and name for a milisecond</td>
-				                    <td>reported</td>
-				                    <td><span class="label label-low">low</span></td>                                       
-				                </tr>
-				                <tr>
-				                    <td>Empty chapter shows word count of 1</td>
-				                    <td>reported</td>
-				                    <td><span class="label label-low">low</span></td>                                       
-				                </tr>
-				                <tr>
 				                    <td>When you switch chapter, the cursor should be "live" in the editor so you can immediately start typing</td>
 				                    <td>reported</td>
 				                    <td><span class="label label-low">low</span></td>                                        
+				                </tr> 
+				                <tr>
+				                    <td><strike>Favicon not showing</strike></td>
+				                    <td><span class="label label-fixed">fixed</span></td>
+				                    <td></td>                                        
+				                </tr>  
+				                    <td><strike>When you first load the page, there are functions in place or title and name for a milisecond</strike></td>
+				                    <td><span class="label label-fixed">fixed</span></td>
+				                    <td></td>                                        
+				                </tr>  
+				                <tr>
+				                    <td><strike>Empty chapter shows word count of 1</strike></td>
+				                    <td><span class="label label-fixed">fixed</span></td>
+				                    <td></td>                                        
+				                </tr>  
+				                <tr>
+				                    <td><strike>If you add new chapter when in the last chapter, the previous chapter's text remains in the editor</strike></td>
+				                    <td><span class="label label-fixed">fixed</span></td>
+				                    <td></td>                                        
 				                </tr>  
 				              </tbody>
 				            </table>
