improving beta page

--- a/public/beta.html
+++ b/public/beta.html
@@ -92,8 +92,7 @@
 	<div class="container">
 			<div class="wrapper">
 			<div class="bugwidget">
-				<h3>Bug progress</h3>
-				<div class="container">
+				<h3>Bug progress</h3><br><br>
 					<div class="row">
 						<div class="span5">
 				            <table class="table table-striped table-condensed">
@@ -144,25 +143,29 @@
 				            </table>
 				            </div>
 					</div>
-				</div>
-				<p style="text-align:left;">You have also let us know what features you would like and suggested improvements for Novlr. You can see the bigger feature requests and vote for which are most important to you <a href="http://blog.novlr.org/tell-us-what-you-need-and-well-build-it/">on the novlr blog</a></p>
+				<br><p style="text-align:left;">You have also let us know what features you would like and suggested improvements for Novlr. You can see the bigger feature requests and vote for which are most important to you <a href="http://blog.novlr.org/tell-us-what-you-need-and-well-build-it/">on the novlr blog</a></p>
 				<p style="text-align:left;">Keep testing and <a href="https://gitreports.com/issue/Novlr/novlr-beta">keep reporting!</a></p>
 			</div>
-			<div class="twitterwidget">
-				<h3>What you're saying on twitter</h3></br>
-				<a class="twitter-timeline" href="https://twitter.com/hashtag/novlrbeta" data-widget-id="503894548834041856">#novlrbeta Tweets</a>
-				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+		</div>
+	</div>
+			<div class="container grey">
+				<div class="wrapper">
+					<div class="twitterwidget">
+						<h3>What you're saying on twitter</h3></br>
+						<a class="twitter-timeline" href="https://twitter.com/hashtag/novlrbeta" data-widget-id="503894548834041856">#novlrbeta Tweets</a>
+						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+					</div>
+					<div class="clear"></div>
+				</div>
 			</div>
 
-				<div class="clear"></div>
-			</div>
-		</div>
-		<div class="container grey">
+
+		<div class="container">
 			<div class="wrapper">
 				<h2>Read our <a href="blogs.novlr.org">blogs</a> for inspiration or view our <a href="/features.html">features page</a> for an in-depth look.</h2>
 			</div>
 		</div>
-		<div class="container">
+		<div class="container grey">
 			<div class="wrapper">
 				<p>We are writers making this for writers - call it our version of procrastination (the house was already clean) - because we want to give YOU no more excuses.</p>
 				<a href="http://blog.novlr.org/we-like-feedback">Feedback welcome and encouraged!</a></br></br>
