--- a/public/beta.html
+++ b/public/beta.html
@@ -84,7 +84,7 @@
 				    var launch_date = new Date(1408887394000);
 				    document.write(days_between(current_date, launch_date))
 
-				</script></span> days and has <span>200</span> testers using it. There are <span>3</span> open bugs and <span>4</span> that have been squashed.</h2>
+				</script></span> days and has <span>200</span> testers using it. There are <span>5</span> open bugs and <span>4</span> that have been squashed.</h2>
 			</div>
 		</div>
 	
@@ -118,6 +118,15 @@
 				                <tr>
 				                    <td>When you switch chapter, the cursor should be "live" in the editor so you can immediately start typing</td>
 				                    <td>reported</td>
+				                    <td><span class="label label-low">low</span></td>                                        
+				                </tr>                                    
+				                <tr>
+				                    <td>Need more margin at the bottom of the editor so that text doesn't ride right to bottom</td>
+				                    <td>in progress</td>
+				                    <td><span class="label label-low">low</span></td>                                        
+				                </tr> 
+				                    <td>Clicking away from the user menu only works if clicking into header. Should work if click away anywhere on the page.</td>
+				                    <td>in progress</td>
 				                    <td><span class="label label-low">low</span></td>                                        
 				                </tr> 
 				                <tr>
