updating bug page

--- a/public/beta.html
+++ b/public/beta.html
@@ -84,7 +84,7 @@
 				    var launch_date = new Date(1408887394000);
 				    document.write(days_between(current_date, launch_date))
 
-				</script></span> days and has <span>200</span> testers using it. There are <span>5</span> open bugs and <span>4</span> that have been squashed.</h2>
+				</script></span> days and has <span>714</span> testers using it. There are <span>14</span> open bugs and <span>4</span> that have been squashed.</h2>
 			</div>
 		</div>
 	
@@ -111,12 +111,43 @@
 				                    </td>                                       
 				                </tr>
 				                <tr>
+				                    <td>Should alert when going offline as it will no longer be saving and settings/add chapter won't work</td>
+				                    <td>reported</td>
+				                    <td><span class="label label-high">high</span>
+				                    </td>                                       
+				                </tr>
+				                <tr>
 				                    <td>When selecting text, it acts stranglely if you move the cursor too far left</td>
 				                    <td>reported</td>
+				                    <td><span class="label label-medium">medium</span></td>                                        
+				                </tr> 
+				                <tr>
+				                    <td>Duplicate chapters created when dragging and dropping on Linux with Firefox</td>
+				                    <td>reported</td>
+				                    <td><span class="label label-medium">medium</span></td>                                        
+				                </tr> 
+				                <tr>
+				                    <td>Tab indentation not always preserved</td>
+				                    <td>reported</td>
+				                    <td><span class="label label-medium">medium</span></td>                                        
+				                </tr>      
+				                <tr>
+				                    <td>One report of full novel word count not accurate compared with per-chapter counts</td>
+				                    <td>Trying to replicate</td>
+				                    <td><span class="label label-medium">medium</span></td>                                        
+				                </tr>        
+				                <tr>
+				                    <td>Pasting cutting off after first full stop in Windows Vista with Opera</td>
+				                    <td>Trying to replicate</td>
 				                    <td><span class="label label-medium">medium</span></td>                                        
 				                </tr>                                   
 				                <tr>
 				                    <td>When you switch chapter, the cursor should be "live" in the editor so you can immediately start typing</td>
+				                    <td>reported</td>
+				                    <td><span class="label label-low">low</span></td>                                        
+				                </tr>                                     
+				                <tr>
+				                    <td>Pasting unecessary line breaks when pasting from Word 2010 (and a couple of other unique scenarios)</td>
 				                    <td>reported</td>
 				                    <td><span class="label label-low">low</span></td>                                        
 				                </tr>                                    
@@ -125,8 +156,24 @@
 				                    <td>in progress</td>
 				                    <td><span class="label label-low">low</span></td>                                        
 				                </tr> 
+				                <tr>
 				                    <td>Clicking away from the user menu only works if clicking into header. Should work if click away anywhere on the page.</td>
-				                    <td>in progress</td>
+				                    <td>reported</td>
+				                    <td><span class="label label-low">low</span></td>                                        
+				                </tr> 
+				                <tr>
+				                    <td>The dialog/modal popups judder a little when they open (chrome)</td>
+				                    <td>reported</td>
+				                    <td><span class="label label-low">low</span></td>                                        
+				                </tr> 
+				                <tr>
+				                    <td>Shows text cursor in non-editable areas</td>
+				                    <td>Trying to replicate</td>
+				                    <td><span class="label label-low">low</span></td>                                        
+				                </tr> 
+				                <tr>
+				                    <td>Chapters buttons need clearer on-focus borders</td>
+				                    <td>In progress</td>
 				                    <td><span class="label label-low">low</span></td>                                        
 				                </tr> 
 				                <tr>
@@ -152,7 +199,9 @@
 				            </table>
 				            </div>
 					</div>
-				<br><p style="text-align:left;">You have also let us know what features you would like and suggested improvements for Novlr. You can see the bigger feature requests and vote for which are most important to you <a href="http://blog.novlr.org/tell-us-what-you-need-and-well-build-it/">on the novlr blog</a></p>
+				<br>
+				<p class="feature-overview">The two biggest feature requests that have come out of testing are <strong>exporting to multiple formats</strong> which we are currently working on and having <strong>multiple novels</strong> which will come in a later release.</p>
+				<p style="text-align:left;">You have let us know what other features you would like and suggested improvements for Novlr. You can see the bigger feature requests and vote for which are most important to you <a href="http://blog.novlr.org/tell-us-what-you-need-and-well-build-it/">on the novlr blog</a></p>
 				<p style="text-align:left;">Keep testing and <a href="https://gitreports.com/issue/Novlr/novlr-beta">keep reporting!</a></p>
 			</div>
 		</div>
